--- a/Frontend/Styles/forecast.css
+++ b/Frontend/Styles/forecast.css
@@ -1,3 +1,11 @@
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  sans-serif;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+}
+
 .container-fluid{
     width: 100%;
     background-image: url('../images/field-with-clouds.jpg');
@@ -6,40 +14,86 @@
     padding: 10px;
    }
 
-.display {
-    text-align: center;
-    width: 400px;
-    margin: auto;
+
+.main {
+  width: 100%;
 }
-.wrapper {
-    margin: 0 9rem;
-    background-color: rgb(115, 115, 210);
-    color: #fff;
-    height: 45vh;
-    margin: 50px auto;
-    border-radius: 2px;
-    border-radius: 5px;
-    box-shadow: 1px 1px 1px 1px grey;
+.inputs {
+  margin-top: 40px;
+  width: 40%;
+  margin-left: 5%;
 }
 
+svg {
+  width: 30px;
+  height: 30px;
+}
+#cityinput {
+  height: 60px;
+  width: 350px;
+  border: none;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+#cityinput[placeholder]{
+  font-size: 20px;
+  padding: 2px;
+  margin-left: 10px;
+}
+#add {
+  height: 60px;
+  width: 90px;
+  border: none;
+  border-radius: 2px;
+  background-color: green;
+  cursor: pointer;
+}
+
+.card {
+  width: 200px;
+  height: 200px;
+  border: 1px solid grey;
+  display: inline-flex;
+  border-radius: 5px;
+  margin: 40px;
+  background-color: azure;
+  color: green;
+  box-shadow: 1px 1px 1px grey;
+  border: none;
+}
 .wrapper h2{
-    padding: 5px 0;
+    margin: auto 20px;
+    margin-top: 50px;
     text-align: center;
-    background: rgb(119, 185, 119);
-    color: white;
+    color: green;
     font-family: 'Kumbh Sans', sans-serif;
   }
   .wrapper p{
-    margin:20px 50px;
-    margin-right: 20px;
     text-align: left;
-    font-size:23px;
+    font-size:20px;
+    margin-left: 5px;
+    margin-top: 15px;
   }
 
   .wrapper h2 span{
     font-size: 26px;
   }
     .wrapper p span{
-    color: #90006e;
-    font-size: 25px;
+      display: block;
+      position: relative;
+      bottom: -20px;
+      margin-left: 5px;
+      font-size: 20px;
+  }
+
+  .recommendation {
+    width: 90%;
+    height:400px;
+    border: 1px solid grey;
+    margin: 20px auto;
+  }
+  .recommendation h1 {
+    text-align: center;
+    margin-top: 40px;
+    
   }
