--- a/Frontend/Styles/style.css
+++ b/Frontend/Styles/style.css
@@ -4,6 +4,10 @@
     margin: 0;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -218,17 +222,18 @@ footer .top_ #input, #contact {
 }
 
 
-/***About Page Styles ***/
+
+/***About Styles ***/
 .about {
     padding-top: 40px;
-    background-image: url('../images/About_background.jpg');
+    /* background-image: url('../images/About_background.jpg'); */
     background-size: cover;
     color: black;
     font-weight: 700;
 }
 
 .about .container {
-    width: 70%;
+    width: 100%;
     text-align: center;
     margin: auto;
     line-height: 30px;
@@ -242,13 +247,59 @@ footer .top_ #input, #contact {
 }
 
 .card {
-    width: 100%;
-    height: fit-content;
+    width: 80%;
+    margin: auto;
+    height: 200px;
     padding: 20px;
+    text-align: center;
     border: 1px solid grey;
     background-color: #fff;
-    margin-bottom: 30px;
-    box-shadow: 1px 1px 0.5px 0.5px grey;
+    box-shadow: 1px 1px 1px 1px grey;
     border: none;
     line-height: 35px;
+    position: relative;
+    bottom: 10px;
+    top: 10px;
+}
+
+.team img {
+    width: 250px;
+    height: 250px;
+}
+
+.team {
+ margin-top: 100px;
+}
+
+.team h1 {
+    margin: auto;
+    text-align: center;
+    margin-bottom: 50px;
+    font-size: xx-large;
+}
+.team p {
+    margin-left: 70px;
+    font-size: large;
+    font-weight: 500;
+}
+.team small{
+    font-size: medium;
+    margin-left: 70px;
+}
+.row-1, .row-2 {
+    display: flex;
+    width: 100%;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
+    margin-left: 30px;
+    margin-bottom: 30px;
+}
+
+.row-1 .img-cont {
+    width: 25%;
+    
+}
+.row-2 .img-cont {
+    width: 30%;
 }
